syntax="proto3";

package event_service;

option go_package = "github.com/XWS-BSEP-TIM5-2022/xws-bsep/microservices/common/proto/event";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service EventService{

  rpc GetAllEvents(GetAllEventsRequest)returns(GetAllEventsResponse){
    option(google.api.http) = {
      get: "/api/events",
    };
  }

}

message GetAllEventsRequest {
}

message GetAllEventsResponse {
  repeated Event events = 1;
}

message Event {
  string id = 1;
  string userId = 2;
  string text = 3;
  string date = 4;
}
 